<resources>
    <string name="app_name">萌魅</string>
    <string name="tab_hot">音悦</string>
    <string name="no_data">暂无数据</string>
    <string name="live">直播</string>
    <string name="login">登录</string>
    <string name="appid">APPID</string>
    <string name="uid">用户ID</string>
    <string name="sid">频道号</string>
    <string name="input_appid">请输入APPID</string>
    <string name="input_uid">请输入用户ID</string>
    <string name="input_sid">请输入频道号</string>
    <string name="input_msg">说点什么吧</string>
    <string name="send">发送</string>
    <string name="low_latency_model">low latency model</string>
    <string name="err_no_server">服务器连接失败，请稍后重试</string>
    <string name="btn_return_home">返回首页</string>
    <string name="btn_return">返回</string>
    <string name="btn_sure">确定</string>
    <string name="hint_chat_input">说点什么</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="xlistview_header_hint_normal">下拉可以刷新</string>
    <string name="xlistview_header_hint_ready">松开后刷新下</string>
    <string name="xlistview_header_hint_loading">正在加载中</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="register">注册</string>
    <string name="register_code_hint">验证码</string>
    <string name="please_input_password">密码</string>
    <string name="please_input_loginname">手机号</string>
    <string name="please_input_name">请输入您的昵称</string>
    <string name="please_input_profession">请输入您的职业</string>
    <string name="please_input_province">请填写您的签名</string>
    <string name="have_login_name_hint">已有帐号？立即登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="regist_head_modify">修改头像</string>
    <string name="regist_head_update">上传头像</string>
    <string name="regist_name">昵称</string>
    <string name="regist_province">签名：</string>
    <string name="next">下一步</string>
    <string name="finish_txt">完成</string>
    <string name="regist_intro">简介</string>
    <string name="please_input_self_desc_hint">请用帅气的40个字介绍自己吧</string>
    <string name="please_set_login_password">请输入6位及以上的字母或数字作密码</string>
    <string name="name">姓名</string>
    <string name="label_uploading">上传中,请稍后...</string>
    <string name="label_file_upload_failed">文件上传失败，请重新尝试！</string>
    <string name="label_edit_info">资料修改</string>
    <string name="label_sdcard_error">SD不可用</string>
    <string name="label_internal_error_2">系统错误，无法获取照片</string>
    <string name="label_select_area">选择区域</string>
    <string name="label_input_pwd">请填写密码</string>
    <string name="label_protocol">请您查看注册协议并且同意本协议！</string>
    <string name="plz_draw_code">请绘制你的保护密码</string>
    <string name="pwd_setted">保护密码已经保存</string>
    <string name="pwd_correct">密码正确</string>
    <string name="pwd_discorrect">密码不正确正确，请重试！</string>
    <string name="fragment_test_send_gif">发送Gif图</string>
    <string name="fragment_test_wx">微信社会化测试</string>
    <string name="edittext_password">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890_</string>
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 :</string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <string name="picture_image_loading">正在加载…</string>
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="picture_save_succeed">图片已保存到相册</string>
    <string name="picture_save_fail">保存图片失败</string>
    <string name="picture_next_album">下一组：</string>
    <string name="picture_previous_album">上一组：</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="flickr_showword">Flickr</string>
    <string name="flickr_no_client">未安装Flickr客户端</string>
    <string name="flickr_content">Flickr只支持图片分享</string>
    <string name="flickr_no_content">请设置分享内容</string>
    <string name="kakao_showword">Kakao Talk</string>
    <string name="kakao_no_client">未安装Kakao Talk客户端</string>
    <string name="kakao_content">Kakao Talk只支持图片、文本分享</string>
    <string name="kakao_no_content">请设置分享内容</string>
    <string name="umeng_socialize_text_laiwang_key">来往</string>
    <string name="umeng_socialize_text_laiwang_dynamic_key">来往动态</string>
    <string name="umeng_socialize_laiwang_default_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能</string>
    <string name="line_showword">LINE</string>
    <string name="line_no_client">未安装Line客户端</string>
    <string name="line_content">Line只支持文本，图片</string>
    <string name="line_no_content">请设置分享内容</string>
    <string name="linkedin_showword">LinkedIn</string>
    <string name="linkedin_no_client">未安装LinkedIn客户端</string>
    <string name="linkedin_content">linked只支持纯文本分享</string>
    <string name="pocket_showword">Pocket</string>
    <string name="pocket_no_client">未安装pocket客户端</string>
    <string name="pocket_content">pocket只支持网页链接分享</string>
    <string name="pull_to_refresh_tap_label">点击刷新</string>
    <string name="umeng_socialize_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_socialize_comment">评论</string>
    <string name="umeng_socialize_comment_detail">评论详情</string>
    <string name="umeng_socialize_back">返回</string>
    <string name="umeng_socialize_near_At">最近@的好友</string>
    <string name="umeng_socialize_friends">关注的好友</string>
    <string name="umeng_socialize_send">发布</string>
    <string name="umeng_socialize_tip_blacklist">对不起，因为违反了用户协议您已被禁言.</string>
    <string name="umeng_socialize_tip_loginfailed">登录失败…</string>
    <string name="umeng_socialize_msg_sec">秒前</string>
    <string name="umeng_socialize_msg_min">分钟前</string>
    <string name="umeng_socialize_msg_hor">小时前</string>
    <string name="umeng_socialize_ucenter_login_title_guide">游客登录</string>
    <string name="umeng_socialize_ucenter_login_title_platform">登录帐号</string>
    <string name="umeng_socialize_share_content">友盟社会化组件（SDK）让移动应用快速整合社交分享功能，我们简化了社交平台的接入，为开发者提供坚实的基础服务。（一）支持各大主流社交平台， （二）支持图片、文字、gif动图、音频、视频；@好友，关注官方微博等功能。 （三）提供详尽的后台用户社交行为分析。www.umeng.com/social</string>
    <string name="umeng_socialize_login_qq">QQ空间</string>
    <string name="umeng_socialize_login">登录</string>
    <string name="umeng_socialize_text_choose_account">选择已有帐号登录</string>
    <string name="umeng_socialize_text_authorize">授权</string>
    <string name="umeng_socialize_text_unauthorize">未授权</string>
    <string name="umeng_socialize_text_ucenter">个人中心</string>
    <string name="umeng_socialize_text_login_fail">登录失败了，请重试</string>
    <string name="umeng_socialize_text_comment_hint">说点什么吧…</string>
    <string name="umeng_socialize_text_friend_list">好友列表</string>
    <string name="umeng_socialize_text_visitor">游客</string>
    <string name="umeng_socialize_text_tencent_no_connection">无法连接到腾讯微博客户端</string>
    <string name="umeng_socialize_text_tencent_oauth_login_fail">授权登录失败</string>
    <string name="umeng_socialize_text_tencent_version_no_match">版本不匹配，SSO只对微博客户端V3.8.1及以上的版本提供支持</string>
    <string name="umeng_socialize_text_tencent_no_install">未安装腾讯微博客户端</string>
    <string name="umeng_socialize_text_waitting">请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin">跳转微信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_weixin_circle">跳转朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin">跳转易信中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_yixin_circle">跳转易信朋友圈中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qq">跳转QQ中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_qzone">跳转QZone中，请稍候...</string>
    <string name="umeng_socialize_text_waitting_redirect">跳转</string>
    <string name="umeng_socialize_text_waitting_message">,请稍候...</string>
    <string name="umeng_socialize_text_loading_message">载入中,请稍候...</string>
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣网</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="login_signin">登录</string>
    <string name="retrieve_password">找回密码</string>
</resources>