<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@null"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/show_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <com.salton123.base.views.common.imageview.CircleImageView
                    android:id="@+id/image_head"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:background="@mipmap/user_default_photo_white"
                    />

                <TextView
                    style="@style/tv_333333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10.0dip"
                    android:text="@string/regist_head_modify"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/show_camara"
                android:layout_width="fill_parent"
                android:layout_height="55.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:visibility="gone">

                <TextView
                    style="@style/tv_333333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:text="@string/regist_head_update"/>

                <ImageView
                    android:id="@+id/image_camara"
                    android:layout_width="80.0dip"
                    android:layout_height="80.0dip"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/camara"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="18.0dip"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_333333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_name"/>

                <EditText
                    android:id="@+id/et_nickname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:background="@null"
                    android:hint="@string/please_input_name"
                    android:inputType="text"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textSize="16.0sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50.0dip"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_333333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="职业"/>

                <EditText
                    android:id="@+id/et_profession"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:background="@null"
                    android:hint="@string/please_input_profession"
                    android:inputType="text"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textSize="16.0sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/tv_333333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/regist_province"/>

                <EditText
                    android:id="@+id/et_signature"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@null"
                    android:hint="@string/please_input_province"
                    android:inputType="text"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textColor="@color/color_101010"
                    android:textSize="16.0sp"
                    android:minHeight="100dip"
                    android:gravity="top|left"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_intro"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="20.0dip"
                android:gravity="top"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/tv_333333_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_intro"/>

                <EditText
                    android:id="@+id/edit_message"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.0dip"
                    android:background="@null"
                    android:drawablePadding="10.0dip"
                    android:hint="@string/please_input_self_desc_hint"
                    android:maxLength="40"
                    android:paddingBottom="16.0dip"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="0.0dip"
                    android:paddingTop="16.0dip"
                    android:textSize="14.0sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_edit_complete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:layout_marginTop="40.0dip"
                android:background="#ff333333"
                android:padding="10.0dip"
                android:text="@string/finish_txt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>