<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@null"
        android:orientation="vertical"
        android:paddingLeft="20.0dip"
        android:paddingRight="20.0dip">

        <EditText
            android:id="@+id/inputPhone2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/border_bottom"
            android:hint="@string/please_input_loginname"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingBottom="16.0dip"
            android:paddingLeft="0.0dip"
            android:paddingRight="0.0dip"
            android:paddingTop="16.0dip"
            android:singleLine="true"
            android:text=""
            android:textCursorDrawable="@null"
            android:textSize="14.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#8d8d8d" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/border_bottom">

            <Button
                android:id="@+id/btnGetCode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignBottom="@+id/inputCode"
                android:layout_alignParentRight="true"
                android:background="@drawable/btn_normal_style"
                android:text="获取验证码"
                android:textColor="#fff"
                android:textSize="14.0sp" />

            <EditText
                android:id="@+id/inputCode"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_margin="0.0dip"
                android:layout_toLeftOf="@+id/btnGetCode"
                android:background="@null"
                android:hint="@string/register_code_hint"
                android:inputType="phone"
                android:padding="0.0dip"
                android:singleLine="true"
                android:textCursorDrawable="@null"
                android:textSize="14.0sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#8d8d8d" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20.0dip"
            android:background="@drawable/border_bottom"
            android:hint="@string/please_set_login_password"
            android:inputType="textPassword"
            android:paddingBottom="16.0dip"
            android:paddingTop="16.0dip"
            android:textCursorDrawable="@null"
            android:textSize="14.0sp" />

        <ImageView
            android:id="@+id/iv_verificationCode"
            android:layout_width="fill_parent"
            android:layout_height="100dip"
            android:layout_gravity="center"
            android:layout_marginTop="10.0dip"
            android:src="@mipmap/pic_loading"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36.0dip"
            android:background="@drawable/takeout_bg_btn_full_green"
            android:padding="10.0dip"
            android:text="确定"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>